logo and form added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <img src="http://svgur.com/i/kM.svg">
         </div>
         <form method="get" action="https://www.google.com/search" class="form-search" target="_blank">
-          <input type="text" name="q" class="search" autocomplete="off" placeholder="Try me">
+          <input type="text" name="q" class="search" autocomplete="off" placeholder="">
           <div class="button-group">
             <button class="button button-default g-search" type="submit">
               Google Search
@@ -38,12 +38,6 @@
           </div>
         </form>
       </main>
-    <!-- Logo End-->
-    <!-- Form Start-->
-    <div id="form">form</div>
-    <!-- Form End-->
-    <!-- Footer Start-->
-    <div id="footer">footer</div>
-    <!-- Footer End-->
+    
 </body>
 </html>
